--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background-color: rgb(40, 38, 38);
+}
+
+
+.sendbtn:hover {
+    transition: 1s;
+    transform: scale(1.1);
+    box-shadow: 5px 5px 30px red;
+   
+  }
